--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,10 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="/styles/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/styles/css/bootstrap.css">
+    <link rel="stylesheet" href="/styles/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
