Added in support for different sources

--- a/views/home/list.ejs
+++ b/views/home/list.ejs
@@ -42,6 +42,10 @@
 			AverageHigh
 		</th>
 
+		<th>
+			Source
+		</th>
+
 		<%
 
 		var card;
@@ -84,6 +88,10 @@
 
 				<td>
 					<%=card['averageHighPrice']%>
+				</td>
+				
+				<td>
+					<%=card['source']%>
 				</td>
 			</tr>
 		<% } %>
