Added in update at to main view

--- a/views/home/list.ejs
+++ b/views/home/list.ejs
@@ -46,6 +46,10 @@
 			Source
 		</th>
 
+		<th>
+			Updated At
+		</th>
+
 		<%
 
 		var card;
@@ -92,6 +96,9 @@
 				
 				<td>
 					<%=card['source']%>
+				</td>
+				<td>
+					<%=card['updatedAt']%>
 				</td>
 			</tr>
 		<% } %>
