Converted to simpler data format

--- a/views/home/list.ejs
+++ b/views/home/list.ejs
@@ -19,27 +19,11 @@
 		</th>
 
 		<th>
-			Low
+			Price
 		</th>
 
 		<th>
-			Medium
-		</th>
-
-		<th>
-			High
-		</th>
-
-		<th>
-			AverageLow
-		</th>
-
-		<th>
-			AverageMedium
-		</th>
-
-		<th>
-			AverageHigh
+			Average
 		</th>
 
 		<th>
@@ -71,27 +55,11 @@
 				</td>
 
 				<td>
-					<%=card['lowPrice']%>
+					<%=card['price']%>
 				</td>
 
 				<td>
-					<%=card['mediumPrice']%>
-				</td>
-
-				<td>
-					<%=card['highPrice']%>
-				</td>
-
-				<td>
-					<%=card['averageLowPrice']%>
-				</td>
-
-				<td>
-					<%=card['averageMediumPrice']%>
-				</td>
-
-				<td>
-					<%=card['averageHighPrice']%>
+					<%=card['average']%>
 				</td>
 				
 				<td>
