--- a/views/manager/list.ejs
+++ b/views/manager/list.ejs
@@ -1,6 +1,29 @@
 <div>
 	<title>Landing page</title>
-        <div>
-            <%= users%>
-        </div>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Username</th>
+                    <th>Role</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <%
+                  var user;
+                  for(var index = 0; index < users.length; index++)
+                  {
+                    user = users[index];
+                %> 
+                   <tr>
+                       <td><%= user['username']%></td>
+                       <td><%= user['type']%></td>
+                       <td><input type="checkbox" class="radio" name="user" value="<%=user['id']%>" /></td>
+                   </tr>
+                <%}%>
+                <tr>
+                    <td><input type="button" value="Delete User"/></td>
+                </tr>
+            </tbody>
+        </table>
 </div>
