--- a/views/manager/login.ejs
+++ b/views/manager/login.ejs
@@ -1,3 +1,4 @@
+<div class="container">
 <div>
         <form role="search" method="POST" style="">
                 <label>Username</label><input type="text" name = "username" />
@@ -5,7 +6,7 @@
                 <button type="submit">Login</>
         </form>	
 </div>
-
+</div>
 <style>
     form
     {
