Added in delete user feature

--- a/views/manager/list.ejs
+++ b/views/manager/list.ejs
@@ -27,7 +27,7 @@
                     <%    }
                       }%>
                     <tr>
-                        <td><button class="btn" type="submit" >Delete User</button></td>
+                        <td><button class="btn" name="delete" value="delete" type="submit" >Delete User</button></td>
                         <td><a href="adduser" class="btn btn-primary">Add user</a> </td>
                     </tr>
                 </tbody>
